button designs and background updated

--- a/index.html
+++ b/index.html
@@ -9,42 +9,42 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <h1>Calculator TI-2bazillion</h1>
-    <div class="top-button button">
-      <button class="action-button">
-        Clear
-      </button></div>
-    <div class ="display">
-    <input id="textbox">
+    <h1>Calculator TI-2</h1>
+   
+    <!-- <div class ="display">
+      <input id="textbox">
+    </div> -->
+  <div class="grid-container" id="alpha"> 
+      <div class ="display"><input id="textbox"></div>
+      <div class="grid-item"><button id ="1" class="digit">1</button></div>
+      <div class="grid-item"><button id ="2" class="digit">2</button></div>
+      <div class="grid-item"><button id ="2" class="digit">3</button></div>
+      <div class="grid-item"><button id ="2" class="digit">4</button></div>
+      <div class="grid-item"><button id ="2" class="digit">5</button></div>
+      <div class="grid-item"><button id ="2" class="digit">6</button></div>
+      <div class="grid-item"><button id ="2" class="digit">7</button></div>
+      <div class="grid-item"><button id ="2" class="digit">8</button></div>
+      <div class="grid-item"><button id ="2" class="digit">9</button></div>
+      <div class="grid-item"><button id ="2" class="digit">0</button></div>
+      <div class="grid-item"><button id ="2" class="digit">.</button></div>
+      <div class="grid-item"><button id ="+" class="mathFunction">+</button></div>
+      <div class="grid-item"><button id ="-" class="mathFunction">-</button></div>
+      <div class="grid-item"><button id ="*" class="mathFunction">*</button></div>
+      <div class="grid-item"><button id ="/" class="mathFunction">/</button></div>
+      <div class="grid-item"><button id ="=" class="mathFunction">=</button></div>
+        <div class="grid-item"><button id ="clear" class="clearDisplay">clear</button></div>
+
     </div>
-    <div class="grid-container" id="alpha">
-      <div class="grid-item"><button id ="1" class="letters">1</button></div>
-      <div class="grid-item"><button id ="2" class="letters">2</button></div>
-      <div class="grid-item"><button>3</button></div>
-      <div class="grid-item"><button>4</button></div>
-      <div class="grid-item"><button>5</button></div>
-      <div class="grid-item"><button>6</button></div>
-      <div class="grid-item"><button>7</button></div>
-      <div class="grid-item"><button>8</button></div>
-      <div class="grid-item"><button>9</button></div>
-      <div class="grid-item"><button>0</button></div>
-      <div class="grid-item"><button>.</button></div>
-      <div class="grid-item"><button>+</button></div>
-      <div class="grid-item"><button>-</button></div>
-      <div class="grid-item"><button>*</button></div>
-      <div class="grid-item"><button>/</button></div>
-      <div class="grid-item"><button>=</button></div>
-
  <script type="text/javascript">
-        var buttons = document.querySelectorAll("#alpha button");
-
-for(var i =0; i < buttons.length; i++){
-  var btn = buttons[i];
-  btn.addEventListener("click", function() {
-    document.getElementById("textbox").value += this.innerHTML;
-  });
-}
+ //array of buttons that are digits and going to be output on the display
+    var buttons = document.querySelectorAll(".digit");
+  //function that displays inner text of buttons
+    for(var i =0; i < buttons.length; i++){
+    var btn = buttons[i];
+      btn.addEventListener("click", function() {
+        document.getElementById("textbox").value += this.innerHTML;
+      });
+    }
     </script>
 </body>
-  </body>
 </html>
